tests/integration/errors/redefinition.rsg
// TEST: compile_error
// EXPECT-ERROR: redefinition of 'x' in the same scope
module test_err

fn main() {
    x := 1
    x := 2
}
